@@ -51,7 +51,7 @@ import org.xml.sax.InputSource;
 /*
  * @test
  * @library /javax/xml/jaxp/libs
- * @run testng/othervm -DrunSecMngr=true javax.xml.transform.ptests.URIResolverTest
+ * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow javax.xml.transform.ptests.URIResolverTest
  * @run testng/othervm javax.xml.transform.ptests.URIResolverTest
  */
 @Listeners({jaxp.library.FilePolicy.class})
