@@ -39,7 +39,7 @@ import org.xml.sax.XMLReader;
 /*
  * @test
  * @library /javax/xml/jaxp/libs
- * @run testng/othervm -DrunSecMngr=true org.xml.sax.ptests.NSTableTest
+ * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow org.xml.sax.ptests.NSTableTest
  * @run testng/othervm org.xml.sax.ptests.NSTableTest
  */
 @Listeners({jaxp.library.BasePolicy.class})
